--- a/crypto_bones/pubspec.yaml
+++ b/crypto_bones/pubspec.yaml
@@ -8,6 +8,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
+  sqflite: '>=0.8.5'
+  path_provider:
+  intl: "^0.15.4"
+  tuple: "^1.0.1"
+  video_player: "^0.4.1"
+  fluro: "^1.3.1"
+  url_launcher: "^3.0.0"
+  
 
 dev_dependencies:
   flutter_test:
