--- a/crypto_bones/pubspec.yaml
+++ b/crypto_bones/pubspec.yaml
@@ -4,6 +4,10 @@ description: A new Flutter project.
 dependencies:
   flutter:
     sdk: flutter
+  http: "^0.11.3+16"
+ 
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -15,6 +19,7 @@ dependencies:
   video_player: "^0.4.1"
   fluro: "^1.3.1"
   url_launcher: "^3.0.0"
+  
   
 
 dev_dependencies:
